testsuite/tests/deriving/should_fail/T10598_fail4.hs
module T10598_fail4 where

data Bar = Bar
  deriving bespoke Eq
