testsuite/tests/deriving/should_fail/T10598_fail4.stderr

T10598_fail4.hs:5:12: error: [GHC-87139]
    Illegal deriving strategy: stock
    Suggested fix: Perhaps you intended to use DerivingStrategies
